--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kort Driessen <driessenkort@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8,<3.12"
 numpy = "^1.23.2"
 scipy = "^1.9.1"
 pandas = "^1.4.4"
