--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-numpy = "^1.23.2"
+numpy = "^1.18"
 scipy = "^1.9.1"
 pandas = "^1.4.4"
 xarray = "^2022.6.0"
-matplotlib = "^3.5.3"
+matplotlib = "3.5.1"
 seaborn = "^0.11.2"
 neurodsp = "^2.1.0"
 tdt = "^0.5.3"
